--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,7 @@ use.quartz.scheduling=true
 #Appserver
 appserver.directory=/java/servers/apache-tomcat-5.5.20
 appserver.localhost.dir=${appserver.directory}/conf/Catalina/localhost
-appserver.lib.dir=${appserver.directory}/common/lib
+appserver.lib.dir=${appserver.directory}/lib
 appserver.url=http://localhost:8080
 
 #Build
@@ -72,7 +72,7 @@ external.famis.directory=${external.work.directory}/famis
 
 # 3. FILES
 rice.name=rice
-rice.version=1.0.3.1
+rice.version=2.1.2-rc3
 rice.web.file=${rice.name}-web-${rice.version}.war
 rice.api.jar=${rice.name}-api-${rice.version}.jar
 rice.impl.jar=${rice.name}-impl-${rice.version}.jar
