KFSNWU-43: Upgrade KMM to Rice 2.0 * Point Rice-lib dir to kfs rice-lib

--- a/build.properties
+++ b/build.properties
@@ -231,7 +231,7 @@ sync.dependency.jars.older.than=-1
 catalog.images.dir=${external.file.share.dir}/catalogimages/${build.environment}/${ant.project.name}
 
 ## Library jar files
-rice.lib.directory=${source.static.directory}/rice-lib
+rice.lib.directory=${kfs.root.directory}/build/rice-lib
 kmm.lib.directory=${source.static.directory}/kmm-lib
 
 #GL versions
