--- a/m2/pom.xml
+++ b/m2/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>kmm</artifactId>
 	<version>5.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Kuali Store Management</name>
+	<name>Kuali Store Management - Parent</name>
 	<inceptionYear>2012</inceptionYear>
 	<developers>
 		<developer>
@@ -27,6 +27,7 @@
 	<modules>
 		<module>api</module>
 		<module>b2b</module>
+		<module>config</module>
 		<module>web</module>
 	</modules>
 	<ciManagement>
@@ -92,6 +93,11 @@
 			<dependency>
 				<groupId>za.ac.nwu</groupId>
 				<artifactId>kmm-b2b</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>za.ac.nwu</groupId>
+				<artifactId>kmm-config</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -253,6 +259,11 @@
 						<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
 					</configuration>
 				</plugin>
+				<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>2.4</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -277,5 +288,27 @@
 				<driver.version>${ojdbc6.version}</driver.version>
 			</properties>
 		</profile>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<kuali.home.setting>target/kuali</kuali.home.setting>
+				<server.name.setting>localhost</server.name.setting>
+				<rice.dev.mode.setting>true</rice.dev.mode.setting>
+				<log.dir.setting>${kuali.home.setting}/kmm/dev/logs</log.dir.setting>
+			</properties>
+		</profile>
+		<profile>
+			<id>release</id>
+			<properties>
+				<kuali.home.setting>/var/opt/kuali</kuali.home.setting>
+				<server.name.setting>[[local.server.name]]</server.name.setting>
+				<rice.dev.mode.setting>false</rice.dev.mode.setting>
+				<log.dir.setting>[Configure me!!!! eg] {user.home}/kuali/kmm/tst/logs</log.dir.setting>
+			</properties>
+		</profile>
+
 	</profiles>
 </project>
