--- a/src/web/WEB-INF/web.xml
+++ b/src/web/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	version="2.4"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+				 version="2.4"
+				 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>kmm</display-name>
 
 	<context-param>
@@ -11,43 +11,44 @@
 
 
 	<!-- Change this if you want to use a different Spring file -->
-	  <context-param>
-	    <param-name>web.bootstrap.spring.file</param-name>
-	    <param-value>classpath:spring-mm-rice-startup.xml</param-value>
-	  </context-param>
+	<context-param>
+		<param-name>web.bootstrap.spring.file</param-name>
+		<param-value>classpath:spring-mm-rice-startup.xml</param-value>
+	</context-param>
 	<context-param>
 		<param-name>shop.guest.user</param-name>
 		<param-value>${shop.guest.user}</param-value>
 	</context-param>
 
-	<filter>
-		<filter-name>HideWebInfFilter</filter-name>
-		<filter-class>org.kuali.rice.krad.web.filter.HideWebInfFilter</filter-class>
-	</filter>
-	
-	<filter>
-		<filter-name>PublicAccessFilter</filter-name>
-		<filter-class>org.kuali.ext.mm.web.PublicAccessFilter</filter-class>
-		<init-param>
-			<param-name>shopping.url</param-name>
-			<param-value>/kmm-${build.environment}/mm</param-value>
-		</init-param>
-		<init-param>
-			<param-name>shop.guest.user</param-name>
-			<param-value>${shop.guest.user}</param-value>
-		</init-param>
-	</filter>
-		
+  <filter>
+    <filter-name>HideWebInfFilter</filter-name>
+    <filter-class>org.kuali.rice.krad.web.filter.HideWebInfFilter</filter-class>
+  </filter>
+
+	<!--TODO: NWU - What happended to PublicAccessFilter-->
+	<!--<filter>-->
+		<!--<filter-name>PublicAccessFilter</filter-name>-->
+		<!--<filter-class>org.kuali.ext.mm.web.PublicAccessFilter</filter-class>-->
+		<!--<init-param>-->
+			<!--<param-name>shopping.url</param-name>-->
+			<!--<param-value>/kmm-${build.environment}/mm</param-value>-->
+		<!--</init-param>-->
+		<!--<init-param>-->
+			<!--<param-name>shop.guest.user</param-name>-->
+			<!--<param-value>${shop.guest.user}</param-value>-->
+		<!--</init-param>-->
+	<!--</filter>-->
+
 	${authentication.filter.definition}
-	
+
 	<filter>
 		<filter-name>SessionFilter</filter-name>
 		<filter-class>org.kuali.rice.krad.web.filter.SessionFilter</filter-class>
 	</filter>
-	<filter>
-		<filter-name>ResponseOverrideFilter</filter-name>
-		<filter-class>org.displaytag.filter.ResponseOverrideFilter</filter-class>
-	</filter>
+  <filter>
+    <filter-name>ResponseOverrideFilter</filter-name>
+    <filter-class>org.displaytag.filter.ResponseOverrideFilter</filter-class>
+  </filter>
 	<filter>
 		<filter-name>SetResponseBufferSizeFilter</filter-name>
 		<filter-class>org.kuali.rice.krad.web.filter.SetResponseBufferSizeFilter</filter-class>
@@ -57,16 +58,17 @@
 		</init-param>
 	</filter>
 
-	<filter>
-		<filter-name>UserLoginFilter</filter-name>
-		<filter-class>org.kuali.rice.kew.web.UserLoginFilter</filter-class>
-	</filter>
+  <filter>
+    <filter-name>UserLoginFilter</filter-name>
+    <filter-class>org.kuali.rice.kew.web.UserLoginFilter</filter-class>
+  </filter>
 
-<!-- Filter Mapping -->
-	<filter-mapping>
-		<filter-name>PublicAccessFilter</filter-name>
-		<servlet-name>action</servlet-name>
-	</filter-mapping>
+
+	<!-- Filter Mapping -->
+	<!--<filter-mapping>-->
+		<!--<filter-name>PublicAccessFilter</filter-name>-->
+		<!--<servlet-name>action</servlet-name>-->
+	<!--</filter-mapping>-->
 
 	${authentication.filter.mappings}
 
@@ -87,101 +89,99 @@
 		<filter-name>HideWebInfFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<filter-mapping>
 		<filter-name>UserLoginFilter</filter-name>
 		<servlet-name>action</servlet-name>
 	</filter-mapping>
 
-	<!--TODO: NWU - Notification servlet does not seem to be used anymore-->
-	<!--<filter-mapping>-->
-		<!--<filter-name>UserLoginFilter</filter-name>-->
-		<!--<servlet-name>notification</servlet-name>-->
-	<!--</filter-mapping>-->
+  <filter-mapping>
+    <filter-name>UserLoginFilter</filter-name>
+    <servlet-name>krad</servlet-name>
+  </filter-mapping>
 
-	<!--TODO: NWU - Edoc servlet does not seem to be used anymore-->
-	<!--<filter-mapping>-->
-		<!--<filter-name>UserLoginFilter</filter-name>-->
-		<!--<servlet-name>edoclite</servlet-name>-->
-	<!--</filter-mapping>-->
+  <!--<filter-mapping>-->
+    <!--<filter-name>UserLoginFilter</filter-name>-->
+    <!--<servlet-name>edoclite</servlet-name>-->
+  <!--</filter-mapping>-->
 
-	<listener>
-		<listener-class>org.kuali.ext.mm.common.sys.context.WebApplicationInitListener</listener-class>
-	</listener>
+	<!--<listener>-->
+		<!--<listener-class>org.kuali.ext.mm.common.sys.context.WebApplicationInitListener</listener-class>-->
+	<!--</listener>-->
 
 	<listener>
 		<listener-class>org.kuali.rice.krad.web.listener.KualiHttpSessionListener</listener-class>
 	</listener>
 
-	<servlet>
-		<servlet-name>action</servlet-name>
-		<servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
-		<init-param>
-			<param-name>config</param-name>
-			<param-value>/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config/ken</param-name>
-			<param-value>/ken/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config/kew</param-name>
-			<param-value>/kew/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config/kr</param-name>
-			<param-value>/kr/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config/ksb</param-name>
-			<param-value>/ksb/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config/kim</param-name>
-			<param-value>/kim/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config/mm</param-name>
-			<param-value>/mm/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>debug</param-name>
-			<param-value>3</param-value>
-		</init-param>
-		<init-param>
-			<param-name>detail</param-name>
-			<param-value>3</param-value>
-		</init-param>
-		<load-on-startup>0</load-on-startup>
-	</servlet>
+
+  <servlet>
+    <servlet-name>action</servlet-name>
+    <servlet-class>org.kuali.rice.kns.web.struts.action.KualiActionServlet</servlet-class>
+    <init-param>
+      <param-name>config</param-name>
+      <param-value>/WEB-INF/struts-config.xml</param-value>
+    </init-param>
+    <init-param>
+      <param-name>debug</param-name>
+      <param-value>3</param-value>
+    </init-param>
+    <init-param>
+      <param-name>detail</param-name>
+      <param-value>3</param-value>
+    </init-param>
+    <load-on-startup>0</load-on-startup>
+  </servlet>
+
 
 	<servlet>
 		<servlet-name>dwr-invoker</servlet-name>
-		<!--TODO: NWU - KualiDWRServlet no longer exists-->
 		<servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
 		<init-param>
 			<param-name>debug</param-name>
-			<param-value>true</param-value>
+			<param-value>false</param-value>
 		</init-param>
 		<init-param>
-			<param-name>springpath</param-name>
-			<param-value>true</param-value>
+			<param-name>config-kew</param-name>
+			<param-value>/WEB-INF/dwr-kew.xml</param-value>
+		</init-param>
+		<init-param>
+			<param-name>config-kns</param-name>
+			<param-value>/WEB-INF/dwr-kns.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<servlet>
-		<servlet-name>remoting</servlet-name>
-		<servlet-class>
-			org.kuali.rice.ksb.messaging.servlet.KSBDispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+	  <!--<servlet>-->
+    <!--<servlet-name>kcb</servlet-name>-->
+    <!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+    <!--<init-param>-->
+      <!--<param-name>contextConfigLocation</param-name>-->
+      <!--<param-value>kcb/WEB-INF/kcb-servlet.xml</param-value>-->
+    <!--</init-param>-->
+    <!--<init-param>-->
+      <!--<description>this init parameter is KCB's module prefix within the containing webapp, it is propagated as a-->
+        <!--property in the XmlApplicationContext-->
+      <!--</description>-->
+      <!--<param-name>prefix</param-name>-->
+      <!--<param-value>/kcb</param-value>-->
+    <!--</init-param>-->
+    <!--<load-on-startup>2</load-on-startup>-->
+  <!--</servlet>-->
 
 	<servlet>
-		<servlet-name>export</servlet-name>
-		<!--TODO: NWU - Not sure if this is the KEW ExportServlet-->
-		<servlet-class>org.kuali.rice.core.web.impex.ExportServlet</servlet-class>
-	</servlet>
+    <servlet-name>remoting</servlet-name>
+    <servlet-class>org.kuali.rice.ksb.messaging.servlet.KSBDispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:org/kuali/rice/ksb/config/remoting-servlet.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet>
+    <servlet-name>export</servlet-name>
+    <servlet-class>org.kuali.rice.core.web.impex.ExportServlet</servlet-class>
+  </servlet>
 
 	<servlet>
 		<servlet-name>exportsecurity</servlet-name>
@@ -193,13 +193,16 @@
 		<servlet-class>org.kuali.rice.kew.notes.web.AttachmentServlet</servlet-class>
 	</servlet>
 
-	<!--TODO: NWU - Find alternative-->
-	<!--
 	<servlet>
-		<servlet-name>edoclite</servlet-name>
-		<servlet-class>EDLServlet</servlet-class>
-	</servlet>
-	-->
+    <servlet-name>krad</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
+
+  <!--<servlet>-->
+    <!--<servlet-name>edoclite</servlet-name>-->
+    <!--<servlet-class>org.kuali.rice.edl.impl.EDLServlet</servlet-class>-->
+  <!--</servlet>-->
 
 	<servlet-mapping>
 		<servlet-name>remoting</servlet-name>
@@ -228,20 +231,46 @@
 
 	<servlet-mapping>
 		<servlet-name>attachment</servlet-name>
-		<url-pattern>/en/attachment/*</url-pattern>
+		<url-pattern>/kew/attachment/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet-mapping>
+    <servlet-name>krad</servlet-name>
+    <url-pattern>/kr-krad/*</url-pattern>
+  </servlet-mapping>
+
 	<!--<servlet-mapping>-->
-		<!--<servlet-name>edoclite</servlet-name>-->
-		<!--<url-pattern>/en/EDocLite</url-pattern>-->
+	<!--<servlet-name>edoclite</servlet-name>-->
+	<!--<url-pattern>/en/EDocLite</url-pattern>-->
 	<!--</servlet-mapping>-->
 
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
 
+	  <jsp-config>
+    <taglib>
+      <taglib-uri>http://www.kuali.org/jsp/jstl/functions</taglib-uri>
+      <taglib-location>/WEB-INF/tlds/kuali-func.tld</taglib-location>
+    </taglib>
 
-	<welcome-file-list>		
+    <!-- customized struts tags -->
+    <taglib>
+      <taglib-uri>http://www.kuali.org/struts.apache.org/tags-html</taglib-uri>
+      <taglib-location>/WEB-INF/tlds/kuali-struts-html.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://www.kuali.org/struts.apache.org/tags-html-el</taglib-uri>
+      <taglib-location>/WEB-INF/tlds/kuali-struts-html-el.tld</taglib-location>
+    </taglib>
+		<taglib>
+      <taglib-uri>http://www.kuali.org/communities/kfs/jsp/functions</taglib-uri>
+      <taglib-location>/WEB-INF/tlds/mmfunc.tld</taglib-location>
+    </taglib>
+  </jsp-config>
+
+
+	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
@@ -250,7 +279,7 @@
 		<error-code>500</error-code>
 		<location>/errors/error.html</location>
 	</error-page>
-	
+
 	<error-page>
 		<error-code>404</error-code>
 		<location>/errors/404.html</location>
@@ -262,4 +291,3 @@
 	</error-page>
 
 </web-app>
-
