--- a/m2/pom.xml
+++ b/m2/pom.xml
@@ -56,7 +56,7 @@
 			<![CDATA[
         <filter>
                 <filter-name>DummyLoginFilter</filter-name>
-                <filter-class>org.kuali.rice.kns.web.filter.DummyLoginFilter</filter-class>
+                <filter-class>org.kuali.rice.kew.web.DummyLoginFilter</filter-class>
                 <init-param>
                         <param-name>loginUser</param-name>
                         <param-value>khuntley</param-value>
