--- a/src/web/WEB-INF/web.xml
+++ b/src/web/WEB-INF/web.xml
@@ -58,10 +58,10 @@
 		</init-param>
 	</filter>
 
-  <filter>
-    <filter-name>UserLoginFilter</filter-name>
-    <filter-class>org.kuali.rice.kew.web.UserLoginFilter</filter-class>
-  </filter>
+  <!--<filter>-->
+    <!--<filter-name>UserLoginFilter</filter-name>-->
+    <!--<filter-class>org.kuali.rice.kew.web.UserLoginFilter</filter-class>-->
+  <!--</filter>-->
 
 
 	<!-- Filter Mapping -->
@@ -90,15 +90,15 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<filter-mapping>
-		<filter-name>UserLoginFilter</filter-name>
-		<servlet-name>action</servlet-name>
-	</filter-mapping>
+	<!--<filter-mapping>-->
+		<!--<filter-name>UserLoginFilter</filter-name>-->
+		<!--<servlet-name>action</servlet-name>-->
+	<!--</filter-mapping>-->
 
-  <filter-mapping>
-    <filter-name>UserLoginFilter</filter-name>
-    <servlet-name>krad</servlet-name>
-  </filter-mapping>
+  <!--<filter-mapping>-->
+    <!--<filter-name>UserLoginFilter</filter-name>-->
+    <!--<servlet-name>krad</servlet-name>-->
+  <!--</filter-mapping>-->
 
   <!--<filter-mapping>-->
     <!--<filter-name>UserLoginFilter</filter-name>-->
@@ -114,42 +114,42 @@
 	</listener>
 
 
-  <servlet>
-    <servlet-name>action</servlet-name>
-    <servlet-class>org.kuali.rice.kns.web.struts.action.KualiActionServlet</servlet-class>
-    <init-param>
-      <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config.xml</param-value>
-    </init-param>
-    <init-param>
-      <param-name>debug</param-name>
-      <param-value>3</param-value>
-    </init-param>
-    <init-param>
-      <param-name>detail</param-name>
-      <param-value>3</param-value>
-    </init-param>
-    <load-on-startup>0</load-on-startup>
-  </servlet>
+  <!--<servlet>-->
+    <!--<servlet-name>action</servlet-name>-->
+    <!--<servlet-class>org.kuali.rice.kns.web.struts.action.KualiActionServlet</servlet-class>-->
+    <!--<init-param>-->
+      <!--<param-name>config</param-name>-->
+      <!--<param-value>/WEB-INF/struts-config.xml</param-value>-->
+    <!--</init-param>-->
+    <!--<init-param>-->
+      <!--<param-name>debug</param-name>-->
+      <!--<param-value>3</param-value>-->
+    <!--</init-param>-->
+    <!--<init-param>-->
+      <!--<param-name>detail</param-name>-->
+      <!--<param-value>3</param-value>-->
+    <!--</init-param>-->
+    <!--<load-on-startup>0</load-on-startup>-->
+  <!--</servlet>-->
 
-
-	<servlet>
-		<servlet-name>dwr-invoker</servlet-name>
-		<servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
-		<init-param>
-			<param-name>debug</param-name>
-			<param-value>false</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config-kew</param-name>
-			<param-value>/WEB-INF/dwr-kew.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>config-kns</param-name>
-			<param-value>/WEB-INF/dwr-kns.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+	 <!--TODO: NWU - Re-enable  dwr-invoker if required-->
+	<!--<servlet>-->
+		<!--<servlet-name>dwr-invoker</servlet-name>-->
+		<!--<servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>-->
+		<!--<init-param>-->
+			<!--<param-name>debug</param-name>-->
+			<!--<param-value>false</param-value>-->
+		<!--</init-param>-->
+		<!--<init-param>-->
+			<!--<param-name>config-kew</param-name>-->
+			<!--<param-value>dwr-kew.xml</param-value>-->
+		<!--</init-param>-->
+		<!--<init-param>-->
+			<!--<param-name>config-kns</param-name>-->
+			<!--<param-value>dwr-kns.xml</param-value>-->
+		<!--</init-param>-->
+		<!--<load-on-startup>1</load-on-startup>-->
+	<!--</servlet>-->
 
 	  <!--<servlet>-->
     <!--<servlet-name>kcb</servlet-name>-->
@@ -193,11 +193,11 @@
 		<servlet-class>org.kuali.rice.kew.notes.web.AttachmentServlet</servlet-class>
 	</servlet>
 
-	<servlet>
-    <servlet-name>krad</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <load-on-startup>3</load-on-startup>
-  </servlet>
+	<!--<servlet>-->
+    <!--<servlet-name>krad</servlet-name>-->
+    <!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+    <!--<load-on-startup>3</load-on-startup>-->
+  <!--</servlet>-->
 
   <!--<servlet>-->
     <!--<servlet-name>edoclite</servlet-name>-->
@@ -209,15 +209,16 @@
 		<url-pattern>/remoting/*</url-pattern>
 	</servlet-mapping>
 
-	<servlet-mapping>
-		<servlet-name>action</servlet-name>
-		<url-pattern>*.do</url-pattern>
-	</servlet-mapping>
+	<!--<servlet-mapping>-->
+		<!--<servlet-name>action</servlet-name>-->
+		<!--<url-pattern>*.do</url-pattern>-->
+	<!--</servlet-mapping>-->
 
-	<servlet-mapping>
-		<servlet-name>dwr-invoker</servlet-name>
-		<url-pattern>/dwr/*</url-pattern>
-	</servlet-mapping>
+
+	<!--<servlet-mapping>-->
+		<!--<servlet-name>dwr-invoker</servlet-name>-->
+		<!--<url-pattern>/dwr/*</url-pattern>-->
+	<!--</servlet-mapping>-->
 
 	<servlet-mapping>
 		<servlet-name>export</servlet-name>
@@ -234,10 +235,10 @@
 		<url-pattern>/kew/attachment/*</url-pattern>
 	</servlet-mapping>
 
-	<servlet-mapping>
-    <servlet-name>krad</servlet-name>
-    <url-pattern>/kr-krad/*</url-pattern>
-  </servlet-mapping>
+	<!--<servlet-mapping>-->
+    <!--<servlet-name>krad</servlet-name>-->
+    <!--<url-pattern>/kr-krad/*</url-pattern>-->
+  <!--</servlet-mapping>-->
 
 	<!--<servlet-mapping>-->
 	<!--<servlet-name>edoclite</servlet-name>-->
