--- a/m2/web/pom.xml
+++ b/m2/web/pom.xml
@@ -164,6 +164,7 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<configuration>
+				    <webAppSourceDirectory>${project.build.directory}/${project.build.finalName}</webAppSourceDirectory>
 					<webXml>${project.build.directory}/${project.build.finalName}/WEB-INF/web.xml</webXml>
 					<systemProperties>
 						<systemProperty>
