--- a/src/web/WEB-INF/web.xml
+++ b/src/web/WEB-INF/web.xml
@@ -168,15 +168,15 @@
     <!--<load-on-startup>2</load-on-startup>-->
   <!--</servlet>-->
 
-	<servlet>
+<!--   <servlet>
     <servlet-name>remoting</servlet-name>
     <servlet-class>org.kuali.rice.ksb.messaging.servlet.KSBDispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:org/kuali/rice/ksb/config/remoting-servlet.xml</param-value>
+      <param-value>classpath:/remoting-servlet.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
-  </servlet>
+  </servlet> -->
 
   <servlet>
     <servlet-name>export</servlet-name>
@@ -204,10 +204,10 @@
     <!--<servlet-class>org.kuali.rice.edl.impl.EDLServlet</servlet-class>-->
   <!--</servlet>-->
 
-	<servlet-mapping>
+<!-- 	<servlet-mapping>
 		<servlet-name>remoting</servlet-name>
 		<url-pattern>/remoting/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 
 	<!--<servlet-mapping>-->
 		<!--<servlet-name>action</servlet-name>-->
