--- a/m2/web/pom.xml
+++ b/m2/web/pom.xml
@@ -26,6 +26,7 @@
 		<dependency>
 			<groupId>za.ac.nwu</groupId>
 			<artifactId>kmm-config</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.kuali.rice</groupId>
@@ -52,8 +53,8 @@
 			<artifactId>rice-impl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.kuali.kfs</groupId>
-			<artifactId>kfs-prototype-core</artifactId>
+			<groupId>za.ac.nwu</groupId>
+			<artifactId>kfs-foundation-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
@@ -164,16 +165,9 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<configuration>
+					<webAppSourceDirectory>${project.build.directory}/${project.build.finalName}</webAppSourceDirectory>
 					<webXml>${project.build.directory}/${project.build.finalName}/WEB-INF/web.xml</webXml>
 					<systemProperties>
-						<systemProperty>
-							<name>environment</name>
-							<value>dev</value>
-						</systemProperty>
-						<systemProperty>
-							<name>log4j.settings.file</name>
-							<value>${user.home}/kuali/kmm/dev/j2ee/dev/kmm/log4j.properties</value>
-						</systemProperty>
 					</systemProperties>
 					<scanIntervalSeconds>0</scanIntervalSeconds>
 					<webAppConfig>
@@ -240,7 +234,7 @@
 
 							<execution>
 								<id>unpack-config</id>
-								<phase>generate-sources</phase>
+								<phase>generate-resources</phase>
 								<goals>
 									<goal>unpack</goal>
 								</goals>
